<resources>
    <string name="app_name">WhatNow</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="Ingresar">Ingresar</string>
    <string name="OlvidarContra">¿Olvidaste tu contraseña?</string>
    <string name="CrearCuenta">Crea tu cuenta!</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>

    <string name="Correo">Correo</string>
    <string name="Registrar">Registrar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="NombreApellido">Nombre y apellidos</string>
    <string name="Rol">Rol</string>
    <string name="Telefono">Telefono</string>
    <string name="ConfirmarContraseña">Confirmar contraseña</string>
    <string name="AceptoTerminos">Acepto los terminos y condiciones</string>

    <!---Direcion backend JORGE GOMEZ -->
    <string name="UrlBackend">https://whatnowback.herokuapp.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ofertas">Ofertas</string>
    <string name="ibm">IBM</string>
    <string name="facebook">Facebook</string>
    <string name="ver_m_s">Ver más</string>
    <string name="google">Google</string>
    <string name="amazon">Amazon</string>
    <string name="desarrollador_web_frontend">Desarrollador web frontend</string>
    <string name="desc1">Se busca ingeniero de sistemas graduado o cursando ultimos semestres para ocupar el cargo de desarrollador web frontend…</string>
    <string name="desarrollador_movil_android">Desarrollador Movil Android</string>
    <string name="desc2">Se busca ingeniero de sistemas graduado o cursando ultimos semestres para ocupar el cargo de desarrollador movil en Android con Java…</string>
    <string name="arquitecto_s">Arquitecto de software</string>
    <string name="desc3">Se busca ingeniero de sistemas graduado o cursando ultimos semestres para ocupar el cargo de desarrollador movil en Android con Java…</string>
    <string name="analista_d">Analista de datos</string>
    <string name="desc4">Se busca ingeniero de sistemas graduado o cursando ultimos semestres para ocupar el cargo de desarrollador movil en Android con Java…</string>
</resources>