<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/fotoView"
        android:layout_width="293dp"
        android:layout_height="124dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/Usuario"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColorLink="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/Contraseña"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColorLink="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <!---com.facebook.login.widget.LoginButton-->
    <Button
        android:id="@+id/login"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:focusable="true"
        android:text="@string/Ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <TextView
        android:id="@+id/textCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/white"
        android:text="@string/CrearCuenta"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/textOlvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/white"
        android:text="@string/OlvidarContra"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.078" />





</androidx.constraintlayout.widget.ConstraintLayout>