<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Correo" />

            <EditText
                android:id="@+id/editTextEmail2"
                android:layout_width="205dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Telefono" />

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="100">

                <EditText
                    android:id="@+id/editTextEmail3"
                    android:layout_width="59dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="20"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="205dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="70"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Contraseña" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/ConfirmarContraseña" />

            <EditText
                android:id="@+id/editTextPasswordConfirm"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/AceptoTerminos" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/Aceptar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>