<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.CandidatureListItem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/candidatureItemImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            android:scaleType="centerCrop"
            android:src="@drawable/facebook_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <LinearLayout
            android:id="@+id/candidatureItemLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/candidatureItemImg"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/candidatureItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/desarrollador_web_frontend"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/candidatureItemCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/facebook"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/candidatureItemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/desc1"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/candidatureItemLinearLayout" />

          <Button
            android:id="@+id/candidatureItemViewMore"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/boton_ver_mas"
            android:text="@string/ver_m_s"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/candidatureItemDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>