<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ofertas.OfertasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imagenEmpresa1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/facebook_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_oval="true" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagenEmpresa1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="70dp">

                <TextView
                    android:id="@+id/cargo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/desarrollador_web_frontend"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nombreEmpresa1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/facebook"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descripcion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/desc1"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/boton_ver_mas"
                android:text="@string/ver_m_s"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imagenEmpresa2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/google_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_oval="true" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagenEmpresa2"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="70dp">

                <TextView
                    android:id="@+id/cargo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/desarrollador_movil_android"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nombreEmpresa2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/google"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descripcion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/desc2"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/boton_ver_mas"
                android:text="@string/ver_m_s"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imagenEmpresa3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/amazon_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_oval="true" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagenEmpresa3"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="70dp">

                <TextView
                    android:id="@+id/cargo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/arquitecto_s"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nombreEmpresa3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/amazon"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descripcion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/desc3"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/boton_ver_mas"
                android:text="@string/ver_m_s"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#66000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imagenEmpresa4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ibm_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_oval="true" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="70dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagenEmpresa4"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="70dp">

                <TextView
                    android:id="@+id/cargo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/analista_d"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nombreEmpresa4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="@string/ibm"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descripcion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/desc4"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/boton_ver_mas"
                android:text="@string/ver_m_s"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>